fix: исправил замечания после код-ревью